--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,17 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+li {
+  list-style: none;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
